added service section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script
+      src="https://kit.fontawesome.com/4105ea9da7.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="header">
@@ -102,6 +106,48 @@
         </div>
       </div>
     </div>
+    <!-- ------------------ service section ------------------ -->
+    <div id="services">
+      <div class="container">
+        <h1 class="sub-title">My Services</h1>
+        <div class="services-list">
+          <div>
+            <i class="fa-solid fa-code"></i>
+            <h2>Web Development</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+              ad dolores doloremque adipisci amet quo aut quis tempora accusamus
+              reprehenderit vitae neque ullam suscipit aspernatur, maxime esse
+              nihil ea sint.
+            </p>
+            <a href="#">Learn more</a>
+          </div>
+          <div>
+            <i class="fa-brands fa-app-store"></i>
+            <h2>Web Development</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+              ad dolores doloremque adipisci amet quo aut quis tempora accusamus
+              reprehenderit vitae neque ullam suscipit aspernatur, maxime esse
+              nihil ea sint.
+            </p>
+            <a href="#">Learn more</a>
+          </div>
+          <div>
+            <i class="fa-brands fa-chrome"></i>
+            <h2>Web Development</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+              ad dolores doloremque adipisci amet quo aut quis tempora accusamus
+              reprehenderit vitae neque ullam suscipit aspernatur, maxime esse
+              nihil ea sint.
+            </p>
+            <a href="#">Learn more</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script>
       var tablinks = document.getElementsByClassName("tab-links");
       var tabcontents = document.getElementsByClassName("tab-contents");
