added portfolio section

--- a/index.html
+++ b/index.html
@@ -147,6 +147,51 @@
         </div>
       </div>
     </div>
+    <!-- ------------------ service section ------------------ -->
+    <div id="portfolio">
+      <div class="container">
+        <h1 class="sub-title">My Work</h1>
+        <div class="work-list">
+          <div class="work">
+            <img
+              src="./assets/png-clipart-business-card-design-shooting-range-portfolio-web-design-responsive-web-design.png"
+            />
+            <div class="layer">
+              <h3>Ecommerce APIs</h3>
+              <p>
+                Ecommerce platform for different models like user, product,
+                cart, order and more
+              </p>
+              <a href="#"
+                ><i class="fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
+            </div>
+          </div>
+          <div class="work">
+            <img src="./assets/new Postman.png" />
+            <div class="layer">
+              <h3>URL shortener</h3>
+              <p>Generat a short id for lengthy url saving memory space</p>
+              <a href="#"
+                ><i class="fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
+            </div>
+          </div>
+          <div class="work">
+            <img src="./assets/responsive-design-ecommerce-site-graphic.png" />
+            <div class="layer">
+              <h3>File share</h3>
+              <p>Allow sharing file to your friends and family via email</p>
+              <a href="#"
+                ><i class="fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+
+        <a href="#" class="btn">See more</a>
+      </div>
+    </div>
 
     <script>
       var tablinks = document.getElementsByClassName("tab-links");
