fixed styling for smaller screen

--- a/index.html
+++ b/index.html
@@ -61,46 +61,89 @@
           <div class="about-col2">
             <h1 class="sub-title">About Me</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem
-              debitis recusandae id minus quo iusto quis optio illum, veritatis
-              aliquam cum esse minima voluptate aut labore mollitia a accusamus
-              quos?
+              I'm a dedicated backend developer skilled in building scalable and
+              efficient server-side application.With a strong foundation in
+              Express.js and MongoDB, I have successfully implemented RESTful
+              APIs and managed complex data structures. My proficiency in
+              Postman enables me to efficiently test and debug my applications."
             </p>
+
             <div class="tab-titles">
               <p class="tab-links active-link" onclick="opentab('skills')">
                 Skills
               </p>
-              <p class="tab-links" onclick="opentab('experience')">
-                Experience
-              </p>
               <p class="tab-links" onclick="opentab('education')">Education</p>
+              <p class="tab-links" onclick="opentab('certificates')">
+                Certificates
+              </p>
             </div>
             <div class="tab-contents active-tab" id="skills">
               <ul>
-                <li><span>Html</span> <br />CSS framework</li>
-                <li><span>CSS</span> <br />Nodejs Web Application framework</li>
+                <li>
+                  <span>Frontend</span> <br />html, css<br />
+                  JavaScript<br />Bootstrap
+                </li>
+                <li>
+                  <span>Backend</span> <br />node.js<br />
+                  express.js <br />mongodb, mongoose<br />postman API
+                </li>
+                <!-- <li><span>CSS</span> <br />Nodejs Web Application framework</li>
                 <li><span>DSA</span> <br />Problem Solving Foundation</li>
                 <li><span>Bootstrap</span> <br />CSS framework</li>
                 <li>
                   <span>Express</span> <br />Nodejs Web Application framework
+                </li> -->
+                <li>
+                  <span>Languages</span> <br />C/C++, Java, JavaScript <br />
                 </li>
-                <li><span>DSA</span> <br />Problem Solving Foundation</li>
-              </ul>
-            </div>
-            <div class="tab-contents" id="experience">
-              <ul>
-                <li><span>frehser</span> <br />CSS framework</li>
-                <li><span>CSS</span> <br />Nodejs Web Application framework</li>
-                <li><span>DSA</span> <br />Problem Solving Foundation</li>
-                <li><span>Bootstrap</span> <br />CSS framework</li>
+                <li><span>DSA</span> <br />Problem Solving <br /></li>
               </ul>
             </div>
             <div class="tab-contents" id="education">
+              <ul>
+                <li><span>MAC</span> (oct 2019 - july 2024)<br />BSc. CSIT</li>
+                <li>
+                  <span>Little Step Sec. School</span>
+                  <br />Science
+                </li>
+                <li><span>Mahamai Sec. School</span> <br />SEE</li>
+              </ul>
+            </div>
+            <!-- <div class="tab-contents" id="experience">
               <ul>
                 <li><span>MAC</span> <br />CSS framework</li>
                 <li><span>CSS</span> <br />Nodejs Web Application framework</li>
                 <li><span>DSA</span> <br />Problem Solving Foundation</li>
                 <li><span>Bootstrap</span> <br />CSS framework</li>
+              </ul>
+            </div> -->
+            <div class="tab-contents" id="certificates">
+              <ul>
+                <li>
+                  <span>Certificates of excellence(c++)</span> <br /><a
+                    href="https://certificate.codingninjas.com/view/993e4ede9f31e708"
+                    target="_blank"
+                    >Certificate link &nbsp<i
+                      class="fa-solid fa-arrow-up-right-from-square"
+                    ></i
+                  ></a>
+                </li>
+                <li>
+                  <span>Data structure in C++</span> <br /><a
+                    href="https://certificate.codingninjas.com/view/d4500cfdb6a0ced6"
+                    target="_blank"
+                    >Certificate link &nbsp
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i
+                  ></a>
+                </li>
+                <li>
+                  <span>Front end web development</span> <br /><a
+                    href="https://certificate.codingninjas.com/view/81a9ccc931cf6305"
+                    target="_blank"
+                    >Certificate link &nbsp
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i
+                  ></a>
+                </li>
               </ul>
             </div>
           </div>
@@ -114,83 +157,85 @@
         <div class="services-list">
           <div>
             <i class="fa-solid fa-code"></i>
-            <h2>Web Development</h2>
+            <h2>API Development</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
-              ad dolores doloremque adipisci amet quo aut quis tempora accusamus
-              reprehenderit vitae neque ullam suscipit aspernatur, maxime esse
-              nihil ea sint.
+              I can develop tailored APIs to meet the specific need of
+              application ensuring seamless communication between the frontend
+              and backend of applications.
             </p>
-            <a href="#">Learn more</a>
+            <a href="#services">Learn more</a>
           </div>
           <div>
-            <i class="fa-brands fa-app-store"></i>
-            <h2>Web Development</h2>
+            <i class="fa-solid fa-database"></i>
+            <h2>Database Management</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
-              ad dolores doloremque adipisci amet quo aut quis tempora accusamus
-              reprehenderit vitae neque ullam suscipit aspernatur, maxime esse
-              nihil ea sint.
+              I can design and optimize database structures to ensure fast and
+              efficient data retrieval and storage.I can implement measures to
+              protect data from corruption and unauthorized access.
             </p>
-            <a href="#">Learn more</a>
+            <a href="#services">Learn more</a>
           </div>
           <div>
             <i class="fa-brands fa-chrome"></i>
-            <h2>Web Development</h2>
+            <h2>Responsive Web Design</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
-              ad dolores doloremque adipisci amet quo aut quis tempora accusamus
-              reprehenderit vitae neque ullam suscipit aspernatur, maxime esse
-              nihil ea sint.
+              I create responsive web designs that look great and function
+              perfectly on any device considering user experience.
             </p>
-            <a href="#">Learn more</a>
+            <a href="#services">Learn more</a>
           </div>
         </div>
       </div>
     </div>
-    <!-- ------------------ service section ------------------ -->
+    <!-- ------------------ portfolio section ------------------ -->
     <div id="portfolio">
       <div class="container">
         <h1 class="sub-title">My Work</h1>
+        <h3>
+          NOTE: Opening my project can take few minutes since I have used free
+          instance of deployement service.
+        </h3>
         <div class="work-list">
           <div class="work">
-            <img
-              src="./assets/png-clipart-business-card-design-shooting-range-portfolio-web-design-responsive-web-design.png"
-            />
+            <img src="./assets/responsive-design-ecommerce-site-graphic.png" />
             <div class="layer">
               <h3>Ecommerce APIs</h3>
               <p>
                 Ecommerce platform for different models like user, product,
                 cart, order and more
               </p>
-              <a href="#"
+              <a
+                href="https://e-commerce-project-using-rest-api.onrender.com"
+                target="_blank"
                 ><i class="fa-solid fa-arrow-up-right-from-square"></i
               ></a>
             </div>
           </div>
           <div class="work">
-            <img src="./assets/new Postman.png" />
+            <img src="./assets/Cos-e-un-blog-definizione.png" />
             <div class="layer">
-              <h3>URL shortener</h3>
+              <h3>Blogging site</h3>
               <p>Generat a short id for lengthy url saving memory space</p>
-              <a href="#"
+              <a href="https://blog-app-jtwg.onrender.com" target="_blank"
                 ><i class="fa-solid fa-arrow-up-right-from-square"></i
               ></a>
             </div>
           </div>
           <div class="work">
-            <img src="./assets/responsive-design-ecommerce-site-graphic.png" />
+            <img src="./assets/share-files.webp" />
             <div class="layer">
               <h3>File share</h3>
               <p>Allow sharing file to your friends and family via email</p>
-              <a href="#"
+              <a href="#" target="_blank"
                 ><i class="fa-solid fa-arrow-up-right-from-square"></i
               ></a>
             </div>
           </div>
         </div>
 
-        <a href="#" class="btn">See more</a>
+        <a href="https://github.com/nabaraj-malla" target="_blank" class="btn"
+          >See more</a
+        >
       </div>
     </div>
     <!-- ------------------ service section ------------------ -->
@@ -199,16 +244,22 @@
         <div class="row">
           <div class="contact-left">
             <h1 class="sut-title">Contact Me</h1>
-            <p><i class="fa-solid fa-envelope"></i>contact@gmail.com</p>
-            <p><i class="fa-solid fa-phone"></i>14388489494</p>
+            <p>
+              <i class="fa-solid fa-envelope"></i>nabarajmalla4000@gmail.com
+            </p>
+            <p><i class="fa-solid fa-phone"></i>9804101771</p>
             <div class="social-icons">
-              <a href="https://github.com/nabaraj-malla"
+              <a href="https://github.com/nabaraj-malla" target="_blank"
                 ><i class="fa-brands fa-github"></i
               ></a>
-              <a href="https://www.linkedin.com/in/nabaraj-malla-45b0aa244/"
+              <a
+                href="https://www.linkedin.com/in/nabaraj-malla-45b0aa244/"
+                target="_blank"
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
-              <a href="https://stackoverflow.com/users/19035233/nabaraj-malla"
+              <a
+                href="https://stackoverflow.com/users/19035233/nabaraj-malla"
+                target="_blank"
                 ><i class="fa-brands fa-stack-overflow"></i
               ></a>
               <a href="#"><i class="fa-brands fa-facebook"></i></a>
