--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div class="layer">
               <h3>Ecommerce APIs</h3>
               <p>
-                Ecommerce platform for different models like user, product,
+                Ecommerce platform APIs for different models like user, product,
                 cart, order and more
               </p>
               <a
@@ -215,7 +215,7 @@
             <img src="./assets/Cos-e-un-blog-definizione.png" />
             <div class="layer">
               <h3>Blogging site</h3>
-              <p>Generat a short id for lengthy url saving memory space</p>
+              <p>Create and explore blogs effortlessly</p>
               <a href="https://blog-app-jtwg.onrender.com" target="_blank"
                 ><i class="fa-solid fa-arrow-up-right-from-square"></i
               ></a>
