--- a/index.html
+++ b/index.html
@@ -101,7 +101,10 @@
             </div>
             <div class="tab-contents" id="education">
               <ul>
-                <li><span>MAC</span> (oct 2019 - july 2024)<br />BSc. CSIT</li>
+                <li>
+                  <span>Mount Annapurna Campus</span> (oct 2019 - july 2024)<br />BSc.
+                  CSIT
+                </li>
                 <li>
                   <span>Little Step Sec. School</span>
                   <br />Science
