added some notes

--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
     <div id="portfolio">
       <div class="container">
         <h1 class="sub-title">My Work</h1>
-        <h3>
-          NOTE: Opening my project can take few minutes since I have used free
-          instance of deployement service.
+        <h3 class="note">
+          NOTE: Opening my project can take few more seconds since I have used
+          free instance of deployement service.
         </h3>
         <div class="work-list">
           <div class="work">
