fixed portfolio section

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <h1 class="sub-title">My Work</h1>
         <h3 class="note">
           NOTE: Opening my project can take few more seconds since I have used
-          free instance of deployement service.
+          free instance of render (Cloud Application Hosting for Developers).
         </h3>
         <div class="work-list">
           <div class="work">
@@ -225,18 +225,24 @@
             </div>
           </div>
           <div class="work">
-            <img src="./assets/share-files.webp" />
+            <img src="./assets/blood-donation.jpg" />
             <div class="layer">
-              <h3>File share</h3>
-              <p>Allow sharing file to your friends and family via email</p>
-              <a href="#" target="_blank"
+              <h3>Blood Bank</h3>
+              <!-- <p>Allow sharing file to your friends and family via email</p> -->
+              <p>Simplifying blood donation and distribution</p>
+              <a
+                href="https://github.com/nabaraj-malla/blood-bank"
+                target="_blank"
                 ><i class="fa-solid fa-arrow-up-right-from-square"></i
               ></a>
             </div>
           </div>
         </div>
 
-        <a href="https://github.com/nabaraj-malla" target="_blank" class="btn"
+        <a
+          href="https://github.com/nabaraj-malla?tab=repositories"
+          target="_blank"
+          class="btn"
           >See more</a
         >
       </div>
@@ -268,7 +274,10 @@
               <a href="#"><i class="fa-brands fa-facebook"></i></a>
             </div>
             <div>
-              <a href="assets/express-logo.png" download class="btn btn2"
+              <a
+                href="assets/Nabaraj-malla-thakuri-resume.pdf"
+                download
+                class="btn btn2"
                 >Download CV</a
               >
             </div>
