--- a/index.html
+++ b/index.html
@@ -237,6 +237,21 @@
               ></a>
             </div>
           </div>
+          <div class="work">
+            <img src="./assets/dsa9.png" />
+            <div class="layer">
+              <h3>DSA</h3>
+              <p>
+                Explore my comprehensive collection of data structures and
+                algorithms solutions, all coded in C++.
+              </p>
+              <a
+                href="https://github.com/nabaraj-malla/DSA-in-Cpp"
+                target="_blank"
+                ><i class="fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
+            </div>
+          </div>
         </div>
 
         <a
