--- a/index.html
+++ b/index.html
@@ -240,11 +240,12 @@
           <div class="work">
             <img src="./assets/dsa9.png" />
             <div class="layer">
-              <h3>DSA</h3>
-              <p>
+              <h3>DSA in C++</h3>
+              <!-- <p>
                 Explore my comprehensive collection of data structures and
                 algorithms solutions, all coded in C++.
-              </p>
+              </p> -->
+              <p>Explore my DSA journey in coding ninjas.</p>
               <a
                 href="https://github.com/nabaraj-malla/DSA-in-Cpp"
                 target="_blank"
