fixed social contact links

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
           <div class="about-col2">
             <h1 class="sub-title">About Me</h1>
             <p>
-              I'm a dedicated backend developer skilled in building scalable and
-              efficient server-side application.With a strong foundation in
+              I'm a dedicated software developer skilled in building scalable
+              and efficient server-side application.With a strong foundation in
               Express.js and MongoDB, I have successfully implemented RESTful
               APIs and managed complex data structures. My proficiency in
               Postman enables me to efficiently test and debug my applications."
@@ -278,7 +278,7 @@
                 ><i class="fa-brands fa-github"></i
               ></a>
               <a
-                href="https://www.linkedin.com/in/nabaraj-malla-45b0aa244/"
+                href="https://www.linkedin.com/in/nabaraj-thakuri-45b0aa244/"
                 target="_blank"
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
